--- a/public/global.css
+++ b/public/global.css
@@ -49,10 +49,14 @@ button {
 	border:none;
 	border-radius: 0;
 	outline: none;
+
+	box-shadow: 2px 2px 0px 2px rgba(227,69,134,0.75);
+	-webkit-box-shadow: 2px 2px 0px 2px rgba(227,69,134,0.75);
+	-moz-box-shadow: 2px 2px 0px 2px rgba(227,69,134,0.75);
 }
 
 button:disabled {
-	opacity: 0.75;
+	opacity: 0.45;
 }
 
 button:not(:disabled):active {
