--- a/public/global.css
+++ b/public/global.css
@@ -11,6 +11,10 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
+h1, h2, h3, p {
+	margin: 0;
+}
+
 a {
 	color: rgb(0,100,200);
 	text-decoration: none;
@@ -26,6 +30,7 @@ a:visited {
 
 label {
 	display: block;
+	color: #00B2AA;
 }
 
 input, button, select, textarea {
@@ -36,7 +41,12 @@ input, button, select, textarea {
 	margin: 0 0 0.5em 0;
 	box-sizing: border-box;
 	border: 1px solid #ccc;
-	border-radius: 2px;
+	border-radius: 5px;
+}
+
+input {
+	background: #FFFFFF;
+	box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.25);
 }
 
 input:disabled {
@@ -44,19 +54,18 @@ input:disabled {
 }
 
 button {
+	cursor: pointer;
 	background: #00b2aa;
 	color: white;
 	border:none;
-	border-radius: 0;
 	outline: none;
 
-	box-shadow: 2px 2px 0px 2px rgba(227,69,134,0.75);
-	-webkit-box-shadow: 2px 2px 0px 2px rgba(227,69,134,0.75);
-	-moz-box-shadow: 2px 2px 0px 2px rgba(227,69,134,0.75);
+	box-shadow: 0px 3px 0px #E34586;
 }
 
 button:disabled {
 	opacity: 0.45;
+	cursor: auto;
 }
 
 button:not(:disabled):active {
@@ -65,4 +74,17 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
+}
+
+/* CSS for removing arrows in inputs when type=number */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
