--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,11 @@
+:root {
+	--mpya-turqoise: #00B2AA;
+	--mpya-pink: #E34586;
+
+	--border-radius: 5px;
+	--padding-small: 0.5em;
+}
+
 html, body {
 	position: relative;
 	width: 100%;
@@ -5,7 +13,8 @@ html, body {
 }
 
 body {
-	color: #333;
+	background: white;
+	color: white;
 	margin: 0;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -30,7 +39,7 @@ a:visited {
 
 label {
 	display: block;
-	color: #00B2AA;
+	color: var(--mpya-turqoise);
 }
 
 input, button, select, textarea {
@@ -41,7 +50,7 @@ input, button, select, textarea {
 	margin: 0 0 0.5em 0;
 	box-sizing: border-box;
 	border: 1px solid #ccc;
-	border-radius: 5px;
+	border-radius: var(--border-radius);
 }
 
 input {
@@ -55,19 +64,14 @@ input:disabled {
 
 button {
 	cursor: pointer;
-	background: #00b2aa;
+	background: var(--mpya-turqoise);
 	color: white;
 	border:none;
 	outline: none;
 
-	box-shadow: 0px 3px 0px #E34586;
+	box-shadow: 0px 3px 0px var(--mpya-pink);
 }
 
-.center {
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
 
 button:disabled {
 	opacity: 0.45;
@@ -80,6 +84,45 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
+}
+
+/* Utilities */
+.width--full {
+	width: 100%;
+}
+
+.height--full {
+	height: 100%;
+}
+
+.flex--column {
+	display: flex;
+	flex-direction: column;
+}
+
+.flex--row {
+	display: flex;
+	flex-direction: row;
+}
+
+.hidden {
+	visibility: hidden;
+}
+
+.truncate {
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+
+.center {
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.text-align-center {
+	text-align: center;
 }
 
 /* CSS for removing arrows in inputs when type=number */
